更新飘落效果

--- a/AndroidSimple/src/main/res/values/strings.xml
+++ b/AndroidSimple/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AndroidRepertory</string>
+    <string name="widget_view_falling_snow">雪花飘落效果</string>
+    <string name="widget_view_custom">自定义View</string>
+    <string name="widget_custom">自定义控件</string>
 </resources>
