--- a/AndroidSimple/src/main/res/values/strings.xml
+++ b/AndroidSimple/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="widget_view_falling_snow">雪花飘落效果</string>
     <string name="widget_view_custom">自定义View</string>
     <string name="widget_custom">自定义控件</string>
+    <string name="widget_view_banner">Banner效果</string>
 </resources>
