--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Fungo</string>
     <string name="main_netgo">网络加载</string>
     <string name="main_imagego">图片加载</string>
+
+    <string name="theme_choose">主题选择</string>
+    <string name="confirm">确定</string>
+    <string name="cancel">取消</string>
 </resources>
